Добавлен класс меню и изменена логика в классе main